messenger/include/dna/dna_engine.h

/* ============================================================================
 * OPAQUE TYPES
 * ============================================================================ */

typedef struct dna_engine dna_engine_t;
typedef uint64_t dna_request_id_t;
/**
 * Address book entry (wallet address storage)
 */
typedef struct {
    int id;                     /* Database row ID */
    char address[128];          /* Wallet address */
    char label[64];             /* User-defined label */
    char network[32];           /* Network: backbone, ethereum, solana, tron */
    char notes[256];            /* Optional notes */
    uint64_t created_at;        /* When address was added */
    uint64_t updated_at;        /* When address was last modified */
    uint64_t last_used;         /* When address was last used for sending */
    uint32_t use_count;         /* Number of times used for sending */
} dna_addressbook_entry_t;
/* ============================================================================
 * ASYNC CALLBACK TYPES
 * ============================================================================ */

/**
 * Generic completion callback (success/error only)
 * Error is 0 (DNA_OK) on success, negative on error
 */
typedef void (*dna_completion_cb)(
    dna_request_id_t request_id,
    int error,
    void *user_data
);
/**
 * Address book callback
 */
typedef void (*dna_addressbook_cb)(
    dna_request_id_t request_id,
    int error,
    dna_addressbook_entry_t *entries,
    int count,
    void *user_data
);
/**
 * Sync contacts from DHT (merge with local)
 *
 * @param engine    Engine instance
 * @param callback  Called on completion
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_sync_contacts_from_dht(
    dna_engine_t *engine,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Sync groups from DHT
 *
 * @param engine    Engine instance
 * @param callback  Called on completion
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_sync_groups(
    dna_engine_t *engine,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Sync groups to DHT (publish local group list)
 *
 * @param engine    Engine instance
 * @param callback  Called on completion
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_sync_groups_to_dht(
    dna_engine_t *engine,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Restore groups from DHT grouplist to local cache
 *
 * Fetches user's personal group list from DHT and restores
 * group metadata to local database. Used for multi-device sync.
 *
 * @param engine    Engine instance
 * @param callback  Called on completion
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_restore_groups_from_dht(
    dna_engine_t *engine,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Free address book entries array returned by callbacks
 */
DNA_API void dna_free_addressbook_entries(dna_addressbook_entry_t *entries, int count);
/* ============================================================================
 * ADDRESS BOOK (wallet address storage)
 * ============================================================================ */

/**
 * Get all address book entries
 *
 * @param engine        Engine instance
 * @param callback      Result callback
 * @param user_data     User data for callback
 * @return              Request ID
 */
DNA_API dna_request_id_t dna_engine_get_addressbook(
    dna_engine_t *engine,
    dna_addressbook_cb callback,
    void *user_data
);
/**
 * Get address book entries by network
 *
 * @param engine        Engine instance
 * @param network       Network name (backbone, ethereum, solana, tron)
 * @param callback      Result callback
 * @param user_data     User data for callback
 * @return              Request ID
 */
DNA_API dna_request_id_t dna_engine_get_addressbook_by_network(
    dna_engine_t *engine,
    const char *network,
    dna_addressbook_cb callback,
    void *user_data
);
/**
 * Add address to address book (synchronous)
 *
 * @param engine        Engine instance
 * @param address       Wallet address
 * @param label         User-defined label
 * @param network       Network name
 * @param notes         Optional notes (can be NULL)
 * @return              0 on success, -1 on error, -2 if already exists
 */
DNA_API int dna_engine_add_address(
    dna_engine_t *engine,
    const char *address,
    const char *label,
    const char *network,
    const char *notes
);
/**
 * Update address in address book (synchronous)
 *
 * @param engine        Engine instance
 * @param id            Database row ID
 * @param label         New label
 * @param notes         New notes (can be NULL to clear)
 * @return              0 on success, -1 on error
 */
DNA_API int dna_engine_update_address(
    dna_engine_t *engine,
    int id,
    const char *label,
    const char *notes
);
/**
 * Remove address from address book (synchronous)
 *
 * @param engine        Engine instance
 * @param id            Database row ID
 * @return              0 on success, -1 on error
 */
DNA_API int dna_engine_remove_address(
    dna_engine_t *engine,
    int id
);
/**
 * Check if address exists in address book (synchronous)
 *
 * @param engine        Engine instance
 * @param address       Wallet address
 * @param network       Network name
 * @return              true if exists, false otherwise
 */
DNA_API bool dna_engine_address_exists(
    dna_engine_t *engine,
    const char *address,
    const char *network
);
/**
 * Lookup address by address string (synchronous)
 *
 * @param engine        Engine instance
 * @param address       Wallet address
 * @param network       Network name
 * @param entry_out     Output entry (caller must free with dna_free_addressbook_entries)
 * @return              0 on success, -1 on error, 1 if not found
 */
DNA_API int dna_engine_lookup_address(
    dna_engine_t *engine,
    const char *address,
    const char *network,
    dna_addressbook_entry_t *entry_out
);
/**
 * Increment address usage count (call after sending to address)
 *
 * @param engine        Engine instance
 * @param id            Database row ID
 * @return              0 on success, -1 on error
 */
DNA_API int dna_engine_increment_address_usage(
    dna_engine_t *engine,
    int id
);
/**
 * Get recently used addresses
 *
 * @param engine        Engine instance
 * @param limit         Maximum number of addresses to return
 * @param callback      Result callback
 * @param user_data     User data for callback
 * @return              Request ID
 */
DNA_API dna_request_id_t dna_engine_get_recent_addresses(
    dna_engine_t *engine,
    int limit,
    dna_addressbook_cb callback,
    void *user_data
);
/**
 * Sync address book to DHT
 *
 * @param engine        Engine instance
 * @param callback      Completion callback
 * @param user_data     User data for callback
 * @return              Request ID
 */
DNA_API dna_request_id_t dna_engine_sync_addressbook_to_dht(
    dna_engine_t *engine,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Sync address book from DHT (replace local)
 *
 * @param engine        Engine instance
 * @param callback      Completion callback
 * @param user_data     User data for callback
 * @return              Request ID
 */
DNA_API dna_request_id_t dna_engine_sync_addressbook_from_dht(
    dna_engine_t *engine,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Export debug logs to a file
 * @param filepath Path to write log file
 * @return 0 on success, -1 on error
 */
DNA_API int dna_engine_debug_log_export(const char *filepath);
/* ============================================================================
 * MESSAGE BACKUP/RESTORE API
 * ============================================================================ */

/**
 * Backup result callback
 *
 * Called when backup or restore operation completes.
 *
 * @param request_id     Request ID from original call
 * @param error          0 on success, negative on error, -2 if not found (restore)
 * @param processed_count Number of messages backed up or restored
 * @param skipped_count   Number of duplicates skipped (restore only, 0 for backup)
 * @param user_data      User data from original call
 */
typedef void (*dna_backup_result_cb)(
    dna_request_id_t request_id,
    int error,
    int processed_count,
    int skipped_count,
    void *user_data
);
/**
 * Backup all messages to DHT
 *
 * Uploads all messages from SQLite to DHT with 7-day TTL.
 * Messages are encrypted with self-encryption (only owner can decrypt).
 *
 * @param engine     Engine instance
 * @param callback   Called on completion with message count
 * @param user_data  User data for callback
 * @return           Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_backup_messages(
    dna_engine_t *engine,
    dna_backup_result_cb callback,
    void *user_data
);
/**
 * Restore messages from DHT
 *
 * Downloads messages from DHT and imports to SQLite.
 * Duplicate messages are automatically skipped.
 *
 * @param engine     Engine instance
 * @param callback   Called on completion with restored/skipped counts
 * @param user_data  User data for callback
 * @return           Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_restore_messages(
    dna_engine_t *engine,
    dna_backup_result_cb callback,
    void *user_data
);
/**
 * Callback for backup info check
 *
 * @param request_id  Request ID from the call
 * @param error       0 on success, -1 on error
 * @param info        Backup info (only valid if error == 0)
 * @param user_data   User data from the call
 */
typedef void (*dna_backup_info_cb)(
    int request_id,
    int error,
    const dna_backup_info_t *info,
    void *user_data
);
/**
 * Check if message backup exists in DHT
 *
 * Useful for new device setup - check if user has existing backup
 * before prompting to restore.
 *
 * @param engine     Engine instance
 * @param callback   Called on completion with backup info
 * @param user_data  User data for callback
 * @return           Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_check_backup_exists(
    dna_engine_t *engine,
    dna_backup_info_cb callback,
    void *user_data
);
/* ============================================================================
 * SIGNING (for QR Auth and external authentication)
 * ============================================================================ */

/**
 * Sign arbitrary data with the loaded identity's Dilithium5 key
 *
 * Creates a detached signature over the provided data using the current
 * identity's private signing key. Used for QR-based authentication flows
 * where the app needs to prove identity to external services.
 *
 * @param engine         Engine instance (must have identity loaded)
 * @param data           Data to sign
 * @param data_len       Length of data in bytes
 * @param signature_out  Output buffer for signature (must be at least 4627 bytes)
 * @param sig_len_out    Output: actual signature length
 * @return               0 on success, negative on error:
 *                       DNA_ENGINE_ERROR_NO_IDENTITY - no identity loaded
 *                       DNA_ERROR_INVALID_ARG - null parameters
 *                       DNA_ERROR_CRYPTO - signing failed
 */
DNA_API int dna_engine_sign_data(
    dna_engine_t *engine,
    const uint8_t *data,
    size_t data_len,
    uint8_t *signature_out,
    size_t *sig_len_out
);
/**
 * Get the loaded identity's Dilithium5 signing public key
 *
 * Copies the raw public key bytes into the provided buffer.
 * Dilithium5 public key size is 2592 bytes.
 *
 * @param engine         Engine instance
 * @param pubkey_out     Output buffer for public key (must be at least 2592 bytes)
 * @param pubkey_out_len Size of output buffer
 * @return               Number of bytes written (2592) on success, negative on error:
 *                       DNA_ENGINE_ERROR_NO_IDENTITY - no identity loaded
 *                       DNA_ERROR_INVALID_ARG - null parameters or buffer too small
 */
DNA_API int dna_engine_get_signing_public_key(
    dna_engine_t *engine,
    uint8_t *pubkey_out,
    size_t pubkey_out_len
);