messenger/dna_messenger_flutter/lib/ffi/dna_bindings.dart


  late final _dna_engine_debug_log_export = _lib.lookupFunction<
      Int32 Function(Pointer<Utf8>),
      int Function(Pointer<Utf8>)>('dna_engine_debug_log_export');

  int dna_engine_debug_log_export(String filepath) {
    final pathPtr = filepath.toNativeUtf8();
    final result = _dna_engine_debug_log_export(pathPtr);
    malloc.free(pathPtr);
    return result;
  }

  // ===========================================================================
  // MESSAGE BACKUP/RESTORE
  // ===========================================================================

  late final _dna_engine_backup_messages = _lib.lookupFunction<
      Uint64 Function(
        Pointer<dna_engine_t>,
        Pointer<DnaBackupResultCb>,
        Pointer<Void>,
      ),
      int Function(
        Pointer<dna_engine_t>,
        Pointer<DnaBackupResultCb>,
        Pointer<Void>,
      )>('dna_engine_backup_messages');

  int dna_engine_backup_messages(
    Pointer<dna_engine_t> engine,
    Pointer<DnaBackupResultCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_backup_messages(engine, callback, user_data);
  }

  late final _dna_engine_restore_messages = _lib.lookupFunction<
      Uint64 Function(
        Pointer<dna_engine_t>,
        Pointer<DnaBackupResultCb>,
        Pointer<Void>,
      ),
      int Function(
        Pointer<dna_engine_t>,
        Pointer<DnaBackupResultCb>,
        Pointer<Void>,
      )>('dna_engine_restore_messages');

  int dna_engine_restore_messages(
    Pointer<dna_engine_t> engine,
    Pointer<DnaBackupResultCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_restore_messages(engine, callback, user_data);
  }

  late final _dna_engine_check_backup_exists = _lib.lookupFunction<
      Uint64 Function(
        Pointer<dna_engine_t>,
        Pointer<DnaBackupInfoCb>,
        Pointer<Void>,
      ),
      int Function(
        Pointer<dna_engine_t>,
        Pointer<DnaBackupInfoCb>,
        Pointer<Void>,
      )>('dna_engine_check_backup_exists');

  int dna_engine_check_backup_exists(
    Pointer<dna_engine_t> engine,
    Pointer<DnaBackupInfoCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_check_backup_exists(engine, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // ADDRESS BOOK
  // ---------------------------------------------------------------------------

  late final _dna_engine_get_addressbook = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaAddressbookCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaAddressbookCb>,
          Pointer<Void>)>('dna_engine_get_addressbook');

  int dna_engine_get_addressbook(
    Pointer<dna_engine_t> engine,
    Pointer<DnaAddressbookCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_addressbook(engine, callback, user_data);
  }

  late final _dna_engine_get_addressbook_by_network = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaAddressbookCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaAddressbookCb>, Pointer<Void>)>(
      'dna_engine_get_addressbook_by_network');

  int dna_engine_get_addressbook_by_network(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> network,
    Pointer<DnaAddressbookCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_addressbook_by_network(
        engine, network, callback, user_data);
  }

  late final _dna_engine_get_recent_addresses = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Int32, Pointer<DnaAddressbookCb>,
          Pointer<Void>),
      int Function(Pointer<dna_engine_t>, int, Pointer<DnaAddressbookCb>,
          Pointer<Void>)>('dna_engine_get_recent_addresses');

  int dna_engine_get_recent_addresses(
    Pointer<dna_engine_t> engine,
    int limit,
    Pointer<DnaAddressbookCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_recent_addresses(engine, limit, callback, user_data);
  }

  late final _dna_engine_add_address = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<Utf8>, Pointer<Utf8>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<Utf8>, Pointer<Utf8>)>('dna_engine_add_address');

  int dna_engine_add_address(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> address,
    Pointer<Utf8> label,
    Pointer<Utf8> network,
    Pointer<Utf8> notes,
  ) {
    return _dna_engine_add_address(engine, address, label, network, notes);
  }

  late final _dna_engine_update_address = _lib.lookupFunction<
      Int32 Function(
          Pointer<dna_engine_t>, Int32, Pointer<Utf8>, Pointer<Utf8>),
      int Function(Pointer<dna_engine_t>, int, Pointer<Utf8>,
          Pointer<Utf8>)>('dna_engine_update_address');

  int dna_engine_update_address(
    Pointer<dna_engine_t> engine,
    int id,
    Pointer<Utf8> label,
    Pointer<Utf8> notes,
  ) {
    return _dna_engine_update_address(engine, id, label, notes);
  }

  late final _dna_engine_remove_address = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Int32),
      int Function(Pointer<dna_engine_t>, int)>('dna_engine_remove_address');

  int dna_engine_remove_address(
    Pointer<dna_engine_t> engine,
    int id,
  ) {
    return _dna_engine_remove_address(engine, id);
  }

  late final _dna_engine_address_exists = _lib.lookupFunction<
      Bool Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>),
      bool Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<Utf8>)>('dna_engine_address_exists');

  bool dna_engine_address_exists(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> address,
    Pointer<Utf8> network,
  ) {
    return _dna_engine_address_exists(engine, address, network);
  }

  late final _dna_engine_lookup_address = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<dna_addressbook_entry_t>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>, Pointer<Utf8>,
          Pointer<dna_addressbook_entry_t>)>('dna_engine_lookup_address');

  int dna_engine_lookup_address(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> address,
    Pointer<Utf8> network,
    Pointer<dna_addressbook_entry_t> entry_out,
  ) {
    return _dna_engine_lookup_address(engine, address, network, entry_out);
  }

  late final _dna_engine_increment_address_usage = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Int32),
      int Function(
          Pointer<dna_engine_t>, int)>('dna_engine_increment_address_usage');

  int dna_engine_increment_address_usage(
    Pointer<dna_engine_t> engine,
    int id,
  ) {
    return _dna_engine_increment_address_usage(engine, id);
  }

  late final _dna_engine_sync_addressbook_to_dht = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaCompletionCb>,
          Pointer<Void>)>('dna_engine_sync_addressbook_to_dht');

  int dna_engine_sync_addressbook_to_dht(
    Pointer<dna_engine_t> engine,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_sync_addressbook_to_dht(engine, callback, user_data);
  }

  late final _dna_engine_sync_addressbook_from_dht = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaCompletionCb>,
          Pointer<Void>)>('dna_engine_sync_addressbook_from_dht');

  int dna_engine_sync_addressbook_from_dht(
    Pointer<dna_engine_t> engine,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_sync_addressbook_from_dht(engine, callback, user_data);
  }

  // Sync contacts from DHT (v0.6.10+)
  late final _dna_engine_sync_contacts_from_dht = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaCompletionCb>,
          Pointer<Void>)>('dna_engine_sync_contacts_from_dht');

  int dna_engine_sync_contacts_from_dht(
    Pointer<dna_engine_t> engine,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_sync_contacts_from_dht(engine, callback, user_data);
  }

  // Restore groups from DHT grouplist (v0.6.10+)
  late final _dna_engine_restore_groups_from_dht = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaCompletionCb>,
          Pointer<Void>)>('dna_engine_restore_groups_from_dht');

  int dna_engine_restore_groups_from_dht(
    Pointer<dna_engine_t> engine,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_restore_groups_from_dht(engine, callback, user_data);
  }

  late final _dna_engine_sync_groups_to_dht = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaCompletionCb>,
          Pointer<Void>)>('dna_engine_sync_groups_to_dht');

  int dna_engine_sync_groups_to_dht(
    Pointer<dna_engine_t> engine,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_sync_groups_to_dht(engine, callback, user_data);
  }

  /// Sync groups FROM DHT (pull latest metadata)
  late final _dna_engine_sync_groups = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>, Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaCompletionCb>,
          Pointer<Void>)>('dna_engine_sync_groups');

  int dna_engine_sync_groups(
    Pointer<dna_engine_t> engine,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_sync_groups(engine, callback, user_data);
  }

  late final _dna_free_addressbook_entries = _lib.lookupFunction<
      Void Function(Pointer<dna_addressbook_entry_t>, Int32),
      void Function(
          Pointer<dna_addressbook_entry_t>, int)>('dna_free_addressbook_entries');

  void dna_free_addressbook_entries(
      Pointer<dna_addressbook_entry_t> entries, int count) {
    _dna_free_addressbook_entries(entries, count);
  }

  // ==========================================================================
  // SIGNING API (for QR Auth)
  // ==========================================================================

  /// Sign data with the loaded identity's Dilithium5 key
  late final _dna_engine_sign_data = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Uint8>, Size,
          Pointer<Uint8>, Pointer<Size>),
      int Function(Pointer<dna_engine_t>, Pointer<Uint8>, int, Pointer<Uint8>,
          Pointer<Size>)>('dna_engine_sign_data');

  int dna_engine_sign_data(
    Pointer<dna_engine_t> engine,
    Pointer<Uint8> data,
    int dataLen,
    Pointer<Uint8> signatureOut,
    Pointer<Size> sigLenOut,
  ) {
    return _dna_engine_sign_data(engine, data, dataLen, signatureOut, sigLenOut);
  }

  /// Get the loaded identity's Dilithium5 signing public key
  late final _dna_engine_get_signing_public_key = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<Uint8>, Size),
      int Function(Pointer<dna_engine_t>, Pointer<Uint8>, int)>(
      'dna_engine_get_signing_public_key');

  int dna_engine_get_signing_public_key(
    Pointer<dna_engine_t> engine,
    Pointer<Uint8> pubkeyOut,
    int pubkeyOutLen,
  ) {
    return _dna_engine_get_signing_public_key(engine, pubkeyOut, pubkeyOutLen);
  }
